--- a/css/footer.css
+++ b/css/footer.css
@@ -5,15 +5,96 @@
     font-family: sans-serif;
 }
 
+/* HEADER */
+
 header {
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    background-color: white;
+}
+
+.header-icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.25rem;
+}
+
+.header-icons button, .header-icons a {
+    border: none;
+    background-color: inherit;
+    cursor: pointer;
+    font-size: 1.75rem;
+    color: var(--Blue);
+}
+
+.header-icons img {
+    height: 1.75rem;
+    width: 1.75rem;
+}
+
+nav {
+    display: none;
+    overflow-y: scroll;
+    background-color: lightgray;
+}
+
+nav.open {
+    display: block;
+    height: 94vh;
+}
+
+#main-cat li button, #main-cat li a, .sub-cat li button, .sub-cat li a {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 1rem;
-    background-color: black;
-    color: white;
+    border: none;
+    background-color: lightgray;
+    color: var(--Blue);
+    font-size: 1.25rem;
+    text-align: left;
+    width: 100%;
+    cursor: pointer;
+}
+
+#main-cat li button:hover .chev-right, .sub-cat li button:hover .chev-right {
+    transform: translate(0.5rem, 0);
+    transition: 0.3s;
+}
+
+.chev-right, .chev-left {
+    font-size: 2rem;
+    transition: 0.3s;
+}
+
+.sub-cat {
+    display: none;
+}
+
+.sub-cat.open {
+    display: block;
+}
+
+.sub-cat li button:hover .chev-left {
+    transform: translate(-0.5rem, 0);
+    transition: 0.3s;
+}
+
+.back-btn {
+    justify-content: flex-start !important;
+}
+
+.hidden {
+    display: none;
 }
 
 .blank {
     height: 150vh;
 }
+
+/* FOOTER */
 
 footer {
     background-color: gray;
