--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,25 @@
+:root {
+    --Blue: #4880ea;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+    text-decoration: none;
+}
+
+body.scroll {
+    overflow-y: hidden;
 }
 
 /* HEADER */
